--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en-us">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,31 +7,116 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/media-queries.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Italianno&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">    
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">    
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     </head>
     <body>
+        <div class="entrada">
+            <img src="image/logo-footer.png">
+        </div>
         <header>
+            <div class="img-1"></div>
+            <div class="img-2"></div>
+            <div class="img-3"></div>
             <div class="top">
-                <h1>Koenigsegg</h1>
-                <span class="material-symbols-outlined">menu</span>
+                <a href="https://www.koenigsegg.com/home">
+                    <h1>Koenigsegg</h1>
+                </a>
+                <span class="material-symbols-outlined">menu
+                    <ul class="mobile-list">
+                        <a href="pages/pag-one.html">
+                            <li>One:1</li>
+                        </a>
+                        <a href="pages/pag-regera.html">
+                            <li>Regera</li>
+                        </a>
+                        <a href="pages/pag-gemera.html">
+                            <li>Gemera</li>
+                        </a>
+                    </ul>
+                </span>
+                <ul class="menu">
+                    <li style="color: white;">Jesko</li>
+                    <a href="pages/pag-one.html">
+                        <li>One:1</li>
+                    </a>
+                    <a href="pages/pag-regera.html">
+                        <li>Regera</li>
+                    </a>
+                    <a href="pages/pag-gemera.html">
+                        <li>Gemera</li>
+                    </a>
+                </ul>
             </div>
         </header>
         <main>
-            <div class="center">
+            <section class="center">
                 <h2>JESKO</h2>
                 <p>The Hypersport dream drive. F variant coming soon!</p>
-                <button type="submit">SPECIFICATIONS</button>
-                <button type="submit">BOOKINGS</button>
-            </div>
+                <button type="submit"><a href="https://youtu.be/E8fYy_5gXDg?si=CXv7jAdBZMVfHgvt" target="_blank">SPECIFICATIONS</a></button>
+                <button type="submit"><a href="https://youtu.be/Kfj1SJBaeuQ?si=NbOPnpkYYL2hQtSH" target="_blank">HIGHLIGHTS</a></button>
+            </section>
+            <section class="Specifications">
+               <div class="engine">
+                    <h1>Celestial Motorization</h1>
+                    <img src="image/koenigsegg-jesko-motor2.webp">
+                    <div class="text">
+                        <ul class="side first">
+                            <li>A 5.0-liter twin-turbo V8 with dual fuel injection system.</li>
+                            <li>1,600 hp when fueled with E85 (ethanol).</li>
+                            <li>1,280 hp with regular gasoline.</li>
+                        </ul>
+                        <ul class="side2 first">
+                            <li>Monstrous torque of 1,500 Nm.</li>
+                            <li>Light speed transmission (just kidding, but almost there).</li>
+                        </ul>
+                    </div>
+               </div>
+               <div class="inside">
+                    <h1>Foggy interior</h1>
+                    <img src="image/koenigsegg-interior.webp">
+                    <div class="text">
+                        <ul class="side first">
+                            <li>Alcantara, carbon fiber, aluminum and glass are used throughout the interior.</li>
+                            <li>Analog G-force meter, because feeling gravity is an astronaut's thing.</li>
+                        </ul>
+                        <ul class="side2 first">
+                            <li>Every detail is meticulously designed to provide heavenly comfort.</li>
+                            <li>The buttons, switches and levers are sculpted like miniature constellations.</li>
+                        </ul>
+                    </div>
+               </div>
+               <div class="aero">
+                    <h1>Cosmic Aerodynamics</h1>
+                    <img src="image/koenigsegg-aerodinamica.jpg" class="aero">
+                    <div class="text">
+                        <ul class="side second">
+                            <li>The curves of the body are sculpted by gravitational forces, optimizing downforce.</li>
+                        </ul>
+                        <ul class="side2 second">
+                            <li>Active wings automatically adjust to maintain a balance between grip and speed.</li>
+                        </ul>
+                    </div>
+               </div>
+               <div class="Perform">
+                    <h1>Twilight Zone Performance</h1>
+                    <img src="image/koenigseeg-correndo.jpg" class="speed">
+                    <div class="text">
+                        <ul class="side third">
+                            <li>0 to 100 km/h in 2.5 seconds (or less, depending on your level of courage).</li>
+                        </ul>
+                        <ul class="side2 third">
+                            <li>estimated maximum speed of 482 km/h (in other words, you will need a space helmet).</li>
+                        </ul>
+                    </div>
+                </div>
+            </section>  
         </main>
-        <footer>
-            <p>Creations by @gogofly</p>
-        </footer>
     </body>
 </html>
